# cumulonumba

./: README.md  requirements.txt  setup.cfg  setup.py
examples/: cumulonumba_v_metpy_rough_test.ipynb
src/cumulonumba/: __init__.py  constants.py  parcel.py  thermo.py  util.py
