[metadata]
name = Cumulonumba
description = Moist thermodynamic and convective parameters implemented with Numba 
long_description = file: README.md
long_description_content_type = text/markdown
author = Cumulonumba Developers
author_email = cumulonumba@thielen.science
maintainer = Jonathan (JT) Thielen
maintainer_email = cumulonumba@thielen.science
license = Apache
license-file = LICENSE
classifiers =
	Development Status :: 1 - Planning
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
url = https://github.com/jthielen/OpenMosaic

[options]
zip_safe = True
package_dir =
	= src
packages = find:
include_package_data = True
setup_requires =
	setuptools
	setuptools_scm
python_requires = >=3.8
install_requires =
	numpy >= 1.20
	numba >= 0.56

[options.packages.find]
where = src

[options.extras_require]
dev = ipython[all]>=3.1
doc = sphinx; pydata-sphinx-theme; matplotlib>=3.3; metpy>=1.3
test = pytest>=5.4.3; flake8>=3.8.3; blue; isort>=5.0.7; awkward; metpy>=1.3

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all-files = True

[pycodestyle]
max-line-length = 95

[flake8]
max-line-length = 95
ignore =
    E203
    E402
    E501
    E731
    W503
exclude=
    .eggs
    docs

[isort]
default_section = THIRDPARTY
known_first_party = cumulonumba
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 95

[tool:pytest]
python_files = test_*.py
testpaths = tests

[blue]
line-length = 95
